Refatorado: atender recomendações do SonarLint.